--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -100,3 +100,20 @@ ul {
   line-height: 0;
   clear: both;
 }
+
+// 骨架屏动画
+.fade {
+  &-leave {
+    &-active {
+      position: absolute;
+      top:0;
+      left:0;
+      width: 100%;
+      transition: opacity 0.5s 0.2s;
+      z-index: 1;
+    }
+    &-to {
+      opacity: 0;
+    }
+  }
+}
