--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -117,3 +117,21 @@ ul {
     }
   }
 }
+
+// 面包屑导航动画
+.fade-right {
+  &-enter-from,
+  &-leave-to {
+    transform: translateX(20px);
+    opacity: 0;
+  }
+  &-enter-active,
+  &-leave-active {
+    transition: all 0.5s;
+  }
+  &-enter-to,
+  &-leave-from {
+    transform: none;
+    opacity: 1;
+  }
+}
